Bug 191347 - amarok2 command line does not load playlists nor folders
Summary: amarok2 command line does not load playlists nor folders
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.90
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-02 16:00 UTC by Marek Brudka
Modified: 2009-06-01 12:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Brudka 2009-05-02 16:00:50 UTC
Version:           2.0.90 (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

This bug is described in more details in ubuntu launchbad:
https://bugs.launchpad.net/ubuntu/+source/amarok/+bug/368908
Comment 1 Myriam Schweingruber 2009-06-01 11:30:21 UTC
Quote from Launchpad:
"Amarok 2.0.2 does not load a playlist file with the command "amarok -l playlist.m3u".m3u or pls, load or append action: same problem.
Idem with a folder (with music files inside)."
It would be really useful to make a correct bug description here...
Comment 2 Lydia Pintscher 2009-06-01 11:43:09 UTC
fixed in 2.1.1
Comment 3 Myriam Schweingruber 2009-06-01 11:49:55 UTC
Confirmed with 2.1-SVN, build r976202
Comment 4 Leo Franchi 2009-06-01 11:56:38 UTC
rather than just re-opening it with no information, which helps no one, if you could actually explain why it doesn't work for you it would help in closing the bug.

what doesn't work? loading an m3u from the command-line works fine here. remote files dont work. folders don't work.
Comment 5 Gary Steinert 2009-06-01 12:41:55 UTC
SVN commit 976224 by gsteinert:

Fixes problems with .pls playlists not being loaded from command line.

This code now matches the 'Add media' menu item code. Converting the list to TrackPtrs
appears to bea pointless step, which breaks any playlist format not already processed
(i.e. anything other than .m3u)

BUG:191347

 M  +1 -2      App.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976224
Comment 6 Gary Steinert 2009-06-01 12:54:27 UTC
SVN commit 976227 by gsteinert:

Fix for .m3u files. The m3u code is redundant now =)

BUG:191347

 M  +2 -2      App.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976227