Fixes problems with .pls playlists not being loaded from command line.

This code now matches the 'Add media' menu item code. Converting the list to TrackPtrs
appears to bea pointless step, which breaks any playlist format not already processed
(i.e. anything other than .m3u)

BUG:191347

svn path=/trunk/extragear/multimedia/amarok/; revision=976224